<resources>
    <string name="app_name">MovieTicketApp</string>
    <string name="lbl_get_started">Get Started</string>
    <string name="lbl_welcome">Welcome!</string>
    <string name="lbl_welcome_to_galaxy_app">Hello! Welcome To Galaxy App</string>
    <string name="lbl_login_to_continue">Welcome back, login to continue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_sing_in">Sing in</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="lbl_confirm">Confirm</string>
    <string name="lbl_now_showing">Now Showing</string>
    <string name="lbl_coming_soon">Coming Soon</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_promotion_code">Promotion Code</string>
    <string name="lbl_select_a_language">Select a language</string>
    <string name="lbl_term_of_services">Term of services</string>
    <string name="lbl_help">Help</string>
    <string name="lbl_rate_us">Rate us</string>
    <string name="lbl_log_out">Log out</string>
    <string name="lbl_plot_summary">Plot Summary</string>
    <string name="lbl_dummy_plot">England, 1884 - a world on the brink of change. On the morning of her 16th birthday, Enola Holmes (Millie Bobby Brown) wakes to find that her mother (Helena Bonham Carter) has disappeared, leaving behind an odd assortment of gifts but no apparent clue as to where she\'s gone or why. After a free-spirited childhood, Enola suddenly finds herself under the care of her brothers Sherlock (Henry Cavill) and Mycroft (Sam Claflin), both set on sending her away to a finishing school for "proper" young ladies. Refusing to follow their wishes, Enola escapes to search for her mother in London. But when her journey finds her entangled in a mystery surrounding a young runaway Lord (Louis Partridge), Enola becomes a super-sleuth in her own right, outwitting her famous brother as she unravels a conspiracy that threatens to set back the course of history.</string>
    <string name="lbl_get_your_ticket">Get Your Ticket</string>
    <string name="lbl_available">Available</string>
    <string name="lbl_reserved">Reserved</string>
    <string name="lbl_your_selection">Your Selection</string>
    <string name="lbl_tickets">Tickets</string>
    <string name="lbl_seats">Seats</string>
    <string name="lbl_enter_promo_code">Enter promo code</string>
    <string name="lbl_dont_have_any_promo_code">Don\'t have any promo code ?</string>
    <string name="lbl_payment_method">Payment Method</string>
    <string name="lbl_credit_card">Credit Card</string>
    <string name="lbl_visa_master_card_jcb">Visa, master card, JCB</string>
    <string name="lbl_e_wallet">E-Wallet</string>
    <string name="lbl_paypal">Paypal</string>
    <string name="lbl_internet_banking_atm_card">Internet banking (ATM Card)</string>
    <string name="lbl_available_in">Available In</string>
    <string name="lbl_2d">2D</string>
    <string name="lbl_3d">3D</string>
    <string name="lbl_imax">IMAX</string>
    <string name="lbl_9_30_am">9:30 AM</string>
    <string name="_11_45_am">11:45 AM</string>
    <string name="lbl_3_30_pm">3:30 PM</string>
    <string name="lbl_5_00_pm">5:00 PM</string>
    <string name="lbl_7_00_pm">7:00 PM</string>
    <string name="_9_30_pm">9:30 PM</string>
    <string name="lbl_payment_amount">Payment amount</string>
    <string name="lbl_card_number">Card Number</string>
    <string name="lbl_card_holder">Card Holder</string>
    <string name="tv_cvc">CVC</string>
    <string name="lbl_expires">EXPIRES</string>
    <string name="lbl_awesome">Awesome!</string>
    <string name="lbl_booking_no">Booking No</string>
    <string name="lbl_theater">Theater</string>
    <string name="lbl_show_time_date">Show time - Date</string>
    <string name="lbl_screen">Screen</string>
    <string name="lbl_row">Row</string>
    <string name="lbl_price">Price</string>
    <string name="lbl_this_is_your_ticket">This is your ticket</string>
    <string name="lbl_sign_in_with_facebook">Sign in with facebook</string>
    <string name="lbl_sign_in_with_google">Sign in with google</string>
    <string name="lbl_cast">Cast</string>
    <string name="lbl_next">Next</string>
    <string name="lbl_get_it_now">Get it now</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_phone">Phone</string>
    <string name="lbl_add_card">Add Card</string>
    <string name="lbl_empty_name">name cannot be empty</string>
    <string name="lbl_empty_password">password cannot be empty</string>


</resources>