<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    tools:context=".activities.GetStartedActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/getting_start" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_xxlarge"
            android:text="@string/lbl_welcome"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/white"
            android:textSize="@dimen/text_regular_3x"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/lbl_welcome_to_galaxy_app"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/secondary_text_white"
            android:textSize="@dimen/text_regular_2x"
            />


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGetStarted"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_getting_start_button"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="@dimen/margin_medium_2"
        android:layout_marginBottom="@dimen/margin_medium_2"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/lbl_get_started"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_regular_2x"
        android:textStyle="bold"
        app:cornerRadius="@dimen/margin_medium"
        app:strokeColor="@color/white" />




</RelativeLayout>