<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SingUpFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvRegisterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/lbl_name"
        android:textColor="@color/color_grey"
        android:textSize="@dimen/text_regular_2x" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvRegisterName"
        app:hintEnabled="false"
        android:layout_marginHorizontal="@dimen/margin_medium_2">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:paddingTop="@dimen/margin_card_medium_2"
            android:fontFamily="@font/poppins_regular"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputLayoutName"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/lbl_phone"
        android:textColor="@color/color_grey"
        android:textSize="@dimen/text_regular_2x" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvPhone"
        app:hintEnabled="false"
        android:layout_marginHorizontal="@dimen/margin_medium_2">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:paddingTop="@dimen/margin_card_medium_2"
            android:fontFamily="@font/poppins_regular"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_below="@id/inputLayoutPhone"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/lbl_email"
        android:textColor="@color/color_grey"
        android:textSize="@dimen/text_regular_2x" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvEmail"
        app:hintEnabled="false"
        android:layout_marginHorizontal="@dimen/margin_medium_2">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:paddingTop="@dimen/margin_card_medium_2"
            android:fontFamily="@font/poppins_regular"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputLayoutEmail"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/lbl_password"
        android:textColor="@color/color_grey"
        android:textSize="@dimen/text_regular_2x" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvPassword"
        android:layout_marginHorizontal="@dimen/margin_medium_2"
        app:hintEnabled="false"
        android:backgroundTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:paddingTop="@dimen/margin_card_medium_2"
            android:fontFamily="@font/poppins_regular"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="@dimen/margin_medium_2"
        android:layout_marginBottom="@dimen/margin_medium"
        layout="@layout/viewpod_login_button" />




</RelativeLayout>